[project]
name = "ErisPulse-InfoStats"
version = "1.0.0"
description = "信息统计模块，用于监听和统计消息事件"
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [ { name = "wsu2059q", email = "wsu2059@qq.com" } ]

dependencies = [
]

[project.urls]
"homepage" = "https://github.com/wsu2059q/ErisPulse-InfoStats"

[project.entry-points."erispulse.module"]
"InfoStats" = "ErisPulse_InfoStats:Main"
